tests/pos/objects/10-object.ts
/*@ foo:: (o: { (Immutable) x: number; }) => { (Immutable) x: number + boolean } */
export function foo(o) {
    return o;
}
